view contoller and endpoint

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-express-auth-template",
+  "name": "help_app",
   "version": "1.0.0",
   "description": "",
   "main": "server/index.js",
